kube/greyhat-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greyhat-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - www.greyh.at
        - greyh.at
        - www.intrarts.com
        - intrarts.com
      secretName: greyhat-tls
  defaultBackend:
    service:
      name: greyhat
      port:
        number: 201
  rules:
    - host: greyh.at
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: greyhat
                port:
                  number: 201
    - host: www.greyh.at
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: greyhat
                port:
                  number: 201
    - host: intrarts.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: greyhat
                port:
                  number: 201
    - host: www.intrarts.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: greyhat
                port:
                  number: 201
